# llm-app-onlearn

./: .gitignore  README.md
llm-app/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.staging  check_quota.py  pyproject.toml  raw_mongo_traces.json  replay_results.json  replay_results_fast_fallback.json  replay_results_with_fallback.json  test_onboarding.py  test_registry.py  test_session_context.py
llm-app/api/: courses.py  courses_ds.py  execution.py  initialise_student.py  main.py  progress.py  validation.py
llm-app/app/clients/: llm_client.py
llm-app/app/models/: plan_models.py  state.py
llm-app/app/modules/: __init__.py  ds.py  dsa.py  registry.py
llm-app/app/onboarding/: __init__.py  agent.py  prompts.py  test_onboarding.py
llm-app/app/planning/: __init__.py  (+7 more)
llm-app/config/: settings.py
llm-app/core/: __init__.py  checkpointer.py  course_data.py  exceptions.py  mongo_db.py  pruning_checkpointer.py  rate_limiter.py
llm-app/models/: __init__.py  concept.py  question.py  solution_approach.py  step.py  student.py
llm-app/repositories/: __init__.py
llm-app/scripts/: audit_db.py  check_llm_api.py  inspect_mongo.py  live_trace_test.py  migrate_checkpoints.py  replay_mongo_traces.py  replay_traces.py  streak_reminder_job.py  stress_test_kimi.py  stress_test_llm_api.py  test_gemini_direct.py  test_kimi_stream.py  test_large_input_latency.py  test_tool_stream.py
llm-app/services/: generate_embeddings.py  mail_service.py
llm-app/tests/: test_workspace_standalone.py
llm-app/utils/: __init__.py  embeddings.py  validators.py
(+101 files in other folders)
