[project]
name = "fastwise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.20.0",
    "ipykernel>=6.29.5",
    "langchain-google-genai>=3.0",
    "langchain-mistralai>=0.2.10",
    "langchain-openai>=0.3.26",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "streamlit>=1.45.1",
    "black>=24.4.2",
    "ruff>=0.5.0",
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "jinja2>=3.1.6",
    "ollama>=0.5.1",
    "transformers>=4.53.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.3",
    "scikit-learn>=1.7.0",
    "baml-py>=0.202.1",
    "langchain>=0.3.26",
    "json-repair>=0.48.0",
    "langgraph-supervisor>=0.0.28",
    "langchain-google-vertexai>=3.0",
    "langchain-core>=1.0",
    "httpx>=0.27.0",
    "httpx>=0.28.1",
    "redis>=5.0.1",
    "slowapi>=0.1.9",
    "pymongo>=4.6.1",
    "deepagents",
    "langgraph-store-mongodb",
    "langgraph-checkpoint-mongodb",
    "google-auth>=2.48.0",
]



[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.25.0",
    "pyyaml>=6.0",
]
